--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "lucide-react": "0.453.0"
+    "lucide-react": "0.453.0",
+    "resend": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
